# python-clean-architecture

./: .env  README.md  alembic.ini  docker-compose.yml  docker_status.txt  pyproject.toml
alembic/: env.py  script.py.mako
src/: main.py
src/application/: __init__.py  behaviors.py  mappers.py
src/application/dtos/: order_dtos.py
src/application/use_cases/orders/: change_order_status.py  create_order.py  delete_order.py  get_orders.py  update_order.py
src/clean_architecture_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/domain/: __init__.py  events.py  exceptions.py
src/domain/entities/: base_entity.py  order.py  order_item.py
src/domain/interfaces/: i_order_repository.py  i_unit_of_work.py
src/infrastructure/: __init__.py  config.py  container.py  logging.py
src/infrastructure/persistence/: database.py  models.py
src/infrastructure/repositories/: mappers.py  order_repository.py  unit_of_work.py
src/presentation/: __init__.py
src/presentation/api/: health_routes.py  order_routes.py
src/presentation/middleware/: correlation_id.py  exception_handlers.py
tests/: test_domain.py  test_exceptions.py  test_integration.py  test_mappers.py  test_validation.py
